fix: tags wrapping

--- a/src/styles/article-preview.scss
+++ b/src/styles/article-preview.scss
@@ -16,7 +16,12 @@
     font-size: 0.8rem;
     margin: 0;
     margin-bottom: 1rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 0.5rem;
     .article-preview-tag {
+      white-space: nowrap;
       margin-right: 0.5rem;
       background-color: #d69e3769;
       padding: 0.25rem 0.75rem;
